@@ -7,7 +7,10 @@ import java.time.Instant;
 import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
+import java.util.HashMap;
 import java.util.Map;
+
+import org.apache.commons.io.IOUtils;
 
 import com.coze.jwt.config.AppConfig;
 import com.coze.openapi.client.auth.OAuthToken;
@@ -45,10 +48,9 @@ public class TokenServer {
             .get(
                 "/",
                 ctx -> {
-                  Map<String, String> model =
-                      Map.of(
-                          "client_type", appConfig.getClientType(),
-                          "client_id", appConfig.getClientId());
+                  Map<String, String> model = new HashMap<>();
+                  model.put("client_type", appConfig.getClientType());
+                  model.put("client_id", appConfig.getClientId());
                   String html = null;
                   try {
                     html = formatHtml(readFromResources("websites/index.html"), model);
@@ -65,16 +67,16 @@ public class TokenServer {
                   try {
                     OAuthToken tokenResp = oauthClient.getAccessToken();
                     ctx.sessionAttribute(genTokenSessionKey(), tokenResp);
-                    Map<String, String> model =
-                        Map.of(
-                            "token_type", tokenResp.getTokenType(),
-                            "access_token", tokenResp.getAccessToken(),
-                            "refresh_token", "",
-                            "expires_in",
-                                String.format(
-                                    "%d (%s)",
-                                    tokenResp.getExpiresIn(),
-                                    timestampToDateTime(tokenResp.getExpiresIn())));
+                    Map<String, String> model = new HashMap<>();
+                    model.put("token_type", tokenResp.getTokenType());
+                    model.put("access_token", tokenResp.getAccessToken());
+                    model.put("refresh_token", "");
+                    model.put(
+                        "expires_in",
+                        String.format(
+                            "%d (%s)",
+                            tokenResp.getExpiresIn(),
+                            timestampToDateTime(tokenResp.getExpiresIn())));
                     if ("XMLHttpRequest".equals(ctx.req.getHeader("X-Requested-With"))) {
                       ctx.json(model);
                       return;
@@ -96,7 +98,8 @@ public class TokenServer {
             .exception(
                 Exception.class,
                 (e, ctx) -> {
-                  Map<String, String> model = Map.of("error", e.getMessage());
+                  Map<String, String> model = new HashMap<>();
+                  model.put("error", e.getMessage());
                   String html = null;
                   try {
                     html = formatHtml(readFromResources("websites/error.html"), model);
@@ -130,7 +133,7 @@ public class TokenServer {
         if (inputStream == null) {
           throw new IllegalArgumentException("file not found: " + fileName);
         }
-        return new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
+        return new String(IOUtils.toByteArray(inputStream), StandardCharsets.UTF_8);
       }
     } catch (IOException e) {
       throw new RuntimeException("read file failed: " + fileName, e);
